--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.17.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version:'2.17.2'
 
+    implementation group: 'org.modelmapper', name: 'modelmapper', version:'3.0.0'
+
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version:'6.2.1.Final'
+
     implementation group: 'jstl', name: 'jstl', version: '1.2'
 
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.4'
